script changes - cart processor

--- a/sm/sm-my-community/main/default/classes/SM_OrderProcessor.cls
+++ b/sm/sm-my-community/main/default/classes/SM_OrderProcessor.cls
@@ -83,7 +83,8 @@ public with sharing class SM_OrderProcessor {
       OrderItem oi = new OrderItem();
 
       oi.ServiceDate = Date.today();
-      oi.Quantity = Decimal.valueOf((String) product.get('quantity'));
+      //oi.Quantity = Integer.valueOf((Decimal) product.get('quantity'));
+      oi.Quantity = Integer.valueOf(String.valueOf(product.get('quantity')));
       oi.Unitprice = (Decimal) product.get('price');
       oi.NetUnitPrice = (Decimal) product.get('price');
       // 238 field is not writeable
