--- a/sm/sm-b2b-connector/main/connectorConfigs/classes/RSM_ConnectorConfigrationSelector.cls
+++ b/sm/sm-b2b-connector/main/connectorConfigs/classes/RSM_ConnectorConfigrationSelector.cls
@@ -24,7 +24,6 @@ public with sharing class RSM_ConnectorConfigrationSelector {
     }
 }
 
-/*
-RSM_ConnectorConfigrationSelector sel = new RSM_ConnectorConfigrationSelector();
-system.debug(sel.getAllConfigByType(''));
-*/
+
+// RSM_ConnectorConfigrationSelector sel = new RSM_ConnectorConfigrationSelector();
+// system.debug(sel.getAllConfigByType(''));
