--- a/sm/sm-b2b-connector/main/default/classes/B2B_CreateUserAccessToken.cls
+++ b/sm/sm-b2b-connector/main/default/classes/B2B_CreateUserAccessToken.cls
@@ -22,7 +22,7 @@ public without sharing class B2B_CreateUserAccessToken {
         Map<String,String>adminUserConfig = configSelector.getAllConfigByType('Admin Configuration');
         //String siteBase = 'https://ssmdev-dev-ed.my.salesforce.com';
        //String siteBase = adminUserConfig.Salesforce_Base_URL__c;
-       String siteBase = B2BUtils.isSandbox() ? 'https://test.salesforce.com/' : 'https://login.salesforce.com/' ;
+       String siteBase = B2BUtils.isSandbox() ? 'https://test.salesforce.com' : 'https://login.salesforce.com' ;
         Auth.JWT jwt = new Auth.JWT();
         jwt.setSub(Userinfo.getUserName());
         jwt.setIss(adminUserConfig.get('Consumer_Key'));
@@ -46,7 +46,7 @@ public without sharing class B2B_CreateUserAccessToken {
       //'https://ssmdev-dev-ed.my.salesforce.com';
       //B2B_User_Login_Configuration__mdt adminUserConfig = B2B_User_Login_Configuration__mdt.getInstance('System_Admin_Configurations');
       Map<String,String>adminUserConfig = configSelector.getAllConfigByType('Admin Configuration');
-      String siteBase = B2BUtils.isSandbox() ? 'https://test.salesforce.com/' : 'https://login.salesforce.com/' ;
+      String siteBase = B2BUtils.isSandbox() ? 'https://test.salesforce.com' : 'https://login.salesforce.com' ;
       Auth.JWT jwt = new Auth.JWT();
       jwt.setSub(adminUserConfig.get('Username'));
       jwt.setIss(adminUserConfig.get('Consumer_Key'));
