add current quantity to component list view

--- a/sm/sm-asset-management/main/default/classes/AssetManagementController.cls
+++ b/sm/sm-asset-management/main/default/classes/AssetManagementController.cls
@@ -13,7 +13,8 @@ public with sharing class AssetManagementController {
         LifecycleStartDate,
         LifecycleEndDate,
         RenewalTerm,
-        RenewalTermUnit
+        RenewalTermUnit,
+        CurrentQuantity
       FROM Asset
       WHERE AccountId = :accountId AND HasLifecycleManagement = TRUE
       ORDER BY createdDate
